<resources>
    <string name="app_name">calc</string>

    <string name="displayhint">Enter</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="zeroText">0</string>

    <string name="clearText">C</string>
    <string name="parenthesesOpenText">(</string>
    <string name="parenthesesCloseText">)</string>
    <string name="divideText">÷</string>
    <string name="multiplyText">×</string>
    <string name="addText">+</string>
    <string name="subtractText">-</string>
    <string name="decimalText">.</string>
    <string name="equalsText">=</string>

    <string name="MR">MC</string>
    <string name="MM">MR-</string>
    <string name="MMM">MR+</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigCTGText">ctg</string>
    <string name="trigArcSinText">sin<sup><small>-1</small></sup></string>
    <string name="trigArcCosText">cos<sup><small>-1</small></sup></string>
    <string name="trigArcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="isPrimeFunctionText">prime</string>

    <string name="backspace"> </string>
    <string name="BackButt">Exit</string>
    <string name="Sintext">Синус острого угла в прямоугольном треугольнике — это отношение противолежащего катета к гипотенузе.</string>
    <string name="Costext">Косинус острого угла в прямоугольном треугольнике — отношение прилежащего катета к гипотенузе.</string>
    <string name="Tantxt">Тангенс острого угла в прямоугольном треугольнике — отношение противолежащего катета к прилежащему.</string>
    <string name="CtgText">Котангенс острого угла в прямоугольном треугольнике — отношение прилежащего катета к противолежащему.</string>
</resources>