<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backkie"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previousCalculationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/displayEditor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/displayEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAlignment="textEnd"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_marginBottom="40dp"
        android:inputType="textPersonName"
        android:hint="@string/displayhint"
        android:textColorHint="@color/white"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button20"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/fourText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button19"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/zeroText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="@+id/button16"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button18"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/purple_button"
            android:text="@string/addText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button17"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/threeText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button16"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/twoText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button15"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/oneText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button14"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/purple_button"
            android:text="@string/subtractText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button13"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/sixText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button12"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/fiveText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/button11"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/sevenText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button9"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/purple_button"
            android:text="@string/multiplyText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button10"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/nineText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button8"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/purple_button"
            android:text="@string/divideText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button27" />

        <Button
            android:id="@+id/button7"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_back"
            android:text="@string/eightText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button6"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/parenthesesOpenText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button25" />

        <Button
            android:id="@+id/button5"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/yellow_button"
            android:text="@string/clearText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button24" />

        <Button
            android:id="@+id/button21"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/mrr"
            android:text="@string/MR"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button22"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/mrr"
            android:text="@string/MM"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button21"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/mrr"
            android:text="@string/MMM"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button22"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/yellow_button"
            android:contentDescription="@string/backspace"
            android:textColor="@color/Burnt_orange"

            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button23"
            app:srcCompat="@drawable/backspace" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/parenthesesCloseText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button26" />

        <Button
            android:id="@+id/button2"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/decimalText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/yellow_button"
            android:text="@string/equalsText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button24"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/newcol"
            android:text="@string/trigSinText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button21" />

        <Button
            android:id="@+id/button25"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/newcol"
            android:text="@string/trigCosText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button24"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

        <Button
            android:id="@+id/button26"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/newcol"
            android:text="@string/trigTanText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintStart_toEndOf="@+id/button25"
            app:layout_constraintTop_toBottomOf="@+id/button23" />

        <Button
            android:id="@+id/button27"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/newcol"
            android:text="@string/trigCTGText"
            android:textColor="@color/Burnt_orange"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button26"
            app:layout_constraintTop_toBottomOf="@+id/button4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>